--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -259,6 +259,9 @@
 .left-\[20\%\]{
 	left: 20%;
 }
+.right-0{
+	right: 0px;
+}
 .right-\[-30px\]{
 	right: -30px;
 }
@@ -273,6 +276,12 @@
 }
 .top-\[-10px\]{
 	top: -10px;
+}
+.top-\[-140px\]{
+	top: -140px;
+}
+.top-\[-15px\]{
+	top: -15px;
 }
 .top-\[10\%\]{
 	top: 10%;
@@ -419,6 +428,9 @@
 }
 .h-full{
 	height: 100%;
+}
+.max-h-\[100px\]{
+	max-height: 100px;
 }
 .max-h-\[1500px\]{
 	max-height: 1500px;
@@ -593,10 +605,6 @@
 	--tw-border-opacity: 1;
 	border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
-.border-primary{
-	--tw-border-opacity: 1;
-	border-color: rgb(147 0 39 / var(--tw-border-opacity));
-}
 .border-opacity-0{
 	--tw-border-opacity: 0;
 }
@@ -663,6 +671,10 @@
 	padding-left: 1.25rem;
 	padding-right: 1.25rem;
 }
+.px-25{
+	padding-left: 1.5625rem;
+	padding-right: 1.5625rem;
+}
 .px-5{
 	padding-left: .3125rem;
 	padding-right: .3125rem;
@@ -711,9 +723,6 @@
 }
 .pr-0{
 	padding-right: 0;
-}
-.pr-20{
-	padding-right: 1.25rem;
 }
 .pt-35{
 	padding-top: 2.1875rem;
@@ -768,6 +777,9 @@
 }
 .text-44{
 	font-size: 2.75rem;
+}
+.text-\[10px\]{
+	font-size: 10px;
 }
 .text-\[13px\]{
 	font-size: 13px;
@@ -847,6 +859,9 @@
 .text-white{
 	--tw-text-opacity: 1;
 	color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.underline{
+	text-decoration-line: underline;
 }
 .antialiased{
 	-webkit-font-smoothing: antialiased;
@@ -1184,17 +1199,17 @@ article > *:not(.entry-content),
 .entry-content ul, .block-editor-block-list__layout ul, .entry-content .acf-block .acf-wysiwyg ul, .mce-content-body ul{
 	margin-top: .9375rem;
 	margin-bottom: 1.875rem;
-	list-style-position: inside;
 }
+/* @apply list-inside; */
 .entry-content ul > li, .block-editor-block-list__layout ul > li, .entry-content .acf-block .acf-wysiwyg ul > li, .mce-content-body ul > li{
-	margin-left: 1.875rem;
+	margin-left: 3.125rem;
 }
-.entry-content li, .block-editor-block-list__layout li, .entry-content .acf-block .acf-wysiwyg li, .mce-content-body li{
-	margin-bottom: .625rem;
-	list-style-type: disc;
-	text-indent: -23px;
-	font-size: .9375rem;
-}
+.entry-content li, .block-editor-block-list__layout li, .entry-content .acf-block .acf-wysiwyg li, .mce-content-body li {
+		/* @apply text-15 md:text-16 list-disc mb-10 indent-[-23px]; */
+		margin-bottom: .625rem;
+		list-style-type: disc;
+		font-size: .9375rem;
+	}
 @media (min-width: 768px){
 	.entry-content li, .block-editor-block-list__layout li, .entry-content .acf-block .acf-wysiwyg li, .mce-content-body li{
 		font-size: 1rem;
@@ -1632,72 +1647,6 @@ article > *:not(.entry-content),
 	.site-content{
 		margin-top: 149px;
 	}
-}
-.slick-dotted.slick-slider{
-	margin-bottom: 0;
-}
-.mainstage .slick-dots{
-	bottom: -35px;
-	right: 3px;
-}
-@media (min-width: 768px){
-	.mainstage .slick-dots{
-		bottom: -40px;
-	}
-}
-.mainstage .slick-dots li{
-	margin-left: .3125rem;
-	margin-right: .3125rem;
-	transition-property: all;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-	transition-duration: 300ms;
-}
-@media (min-width: 768px){
-	.mainstage .slick-dots li{
-		margin-left: .9375rem;
-		margin-right: .9375rem;
-	}
-}
-.mainstage .slick-dots li:hover {
-		}
-.mainstage .slick-dots li:not(.slick-active):hover{
-	opacity: 0.4;
-}
-.mainstage .slick-dots li button:before{
-	border-radius: 9999px;
-	border-width: 2px;
-	border-color: rgb(147 0 39 / var(--tw-border-opacity));
-	--tw-border-opacity: 1;
-	--tw-bg-opacity: 1;
-	background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-	font-size: 1.25rem;
-	height: 15px;
-	width: 15px;
-	opacity: 1;
-}
-@media (min-width: 768px){
-	.mainstage .slick-dots li button:before{
-		height: 25px;
-		width: 25px;
-	}
-}
-.mainstage .slick-dots li button:before {
-		content: " ";
-	}
-.mainstage .slick-dots li button:before:hover {
-		}
-.mainstage .slick-dots li.slick-active button:before{
-	--tw-bg-opacity: 1;
-	background-color: rgb(147 0 39 / var(--tw-bg-opacity));
-}
-.mainstage .slick-dots li.slick-active button:before:hover{
-	opacity: 1;
-}
-.modal{
-	top: 30px;
-	max-width: 90vw;
-	--tw-bg-opacity: 1;
-	background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .location-overview__map {
 		height: 800px;
@@ -3463,6 +3412,9 @@ img.alignright{
 			content: " ";
 			z-index: -1;
 }
+.entry-content .image-pathways__more-open, .block-editor-block-list__layout .image-pathways__more-open{
+	position: relative;
+}
 .entry-content .image-pathways--style1 .image-pathways__link, .block-editor-block-list__layout .image-pathways--style1 .image-pathways__link{
 	--tw-bg-opacity: 1;
 	background-color: rgb(147 0 39 / var(--tw-bg-opacity));
@@ -3479,6 +3431,7 @@ img.alignright{
 	height: 100px;
 }
 .entry-content .image-pathways--style3 .image-pathways__img, .block-editor-block-list__layout .image-pathways--style3 .image-pathways__img{
+	max-height: 100px;
 	border-radius: 0px;
 }
 .entry-content .image-pathways--style4 .image-pathways__headline, .block-editor-block-list__layout .image-pathways--style4 .image-pathways__headline{
@@ -3626,6 +3579,9 @@ img.alignright{
 .entry-content .accordion--faq .accordion__title, .block-editor-block-list__layout .accordion--faq .accordion__title{
 	background-color: transparent;
 }
+.entry-content .accordion--rates .accordion__item.active + .accordion__item, .block-editor-block-list__layout .accordion--rates .accordion__item.active + .accordion__item{
+	margin-top: 5rem;
+}
 .entry-content .accordion__headline, .block-editor-block-list__layout .accordion__headline{
 	margin-bottom: .625rem;
 	text-align: center;
@@ -3638,6 +3594,9 @@ img.alignright{
 }
 .entry-content .accordion__item, .block-editor-block-list__layout .accordion__item{
 	display: block;
+	transition-property: all;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 300ms;
 }
 .entry-content .accordion__item:not(:last-child), .block-editor-block-list__layout .accordion__item:not(:last-child){
 	border-bottom-width: 1px;
@@ -3756,12 +3715,6 @@ img.alignright{
 		top: 25%;
 		left: 25%;
 	}
-}
-.entry-content .accordion .accordion__item.active + .accordion__item, .block-editor-block-list__layout .accordion .accordion__item.active + .accordion__item{
-	margin-top: 5rem;
-	border-width: 1px;
-	--tw-border-opacity: 1;
-	border-color: rgb(147 0 39 / var(--tw-border-opacity));
 }
 .entry-content .fifty, .block-editor-block-list__layout .fifty{
 	margin-top: 3.125rem;
@@ -4038,7 +3991,7 @@ img.alignright{
 }
 @media (min-width: 1150px){
 	.entry-content .comparison__item-inner, .block-editor-block-list__layout .comparison__item-inner{
-		max-height: 348px;
+		max-height: 400px;
 	}
 }
 .entry-content .comparison__item-inner.active, .block-editor-block-list__layout .comparison__item-inner.active{
@@ -4076,7 +4029,7 @@ img.alignright{
 	--tw-text-opacity: 1;
 	color: rgb(21 99 110 / var(--tw-text-opacity));
 		font-size: clamp(1.75rem, -0.3833rem + 5.3333vw, 2.75rem);
-		margin-bottom: 1.25rem;
+		margin-bottom: 2.5rem;
 }
 .entry-content .comparison__title, .block-editor-block-list__layout .comparison__title{
 	margin-bottom: 1.25rem;
@@ -4091,17 +4044,20 @@ img.alignright{
 			font-size: clamp(0.9375rem, -0.2625rem + 3vw, 1.5rem) !important;
 }
 .entry-content .comparison__content, .block-editor-block-list__layout .comparison__content{
-	margin-bottom: .625rem;
-	padding-left: 1.25rem;
-	padding-right: 1.25rem;
+	margin-bottom: 1.25rem;
+	padding-left: 1.5625rem;
+	padding-right: 1.5625rem;
 	font-weight: 700;
 	--tw-text-opacity: 1;
 	color: rgb(21 99 110 / var(--tw-text-opacity));
 }
+.entry-content .comparison__attributes, .block-editor-block-list__layout .comparison__attributes{
+	--tw-text-opacity: 1;
+	color: rgb(72 80 80 / var(--tw-text-opacity));
+}
 .entry-content .comparison__attributes ul, .block-editor-block-list__layout .comparison__attributes ul{
-	padding-left: 1.25rem;
-	padding-right: 1.25rem;
-	padding-bottom: 1.25rem;
+	padding-left: 0;
+	padding-right: 0;
 }
 .entry-content .comparison__attributes li, .block-editor-block-list__layout .comparison__attributes li{
 	margin-bottom: .625rem;
@@ -4158,6 +4114,21 @@ img.alignright{
 	.entry-content .comparison__more-open, .block-editor-block-list__layout .comparison__more-open{
 		display: block;
 	}
+}
+.entry-content .comparison__more-open:not(.active)::after, .block-editor-block-list__layout .comparison__more-open:not(.active)::after{
+	position: absolute;
+	left: 0px;
+	right: 0px;
+	top: -140px;
+	--tw-bg-opacity: 1;
+	background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+				height: 140px;
+				content: "";
+				background: linear-gradient(
+					0deg,
+					rgba(255, 255, 255, 1) 0%,
+					rgba(255, 255, 255, 0) 100%
+				);
 }
 .entry-content .comparison__more-open--mobile, .block-editor-block-list__layout .comparison__more-open--mobile{
 	position: relative;
@@ -4298,12 +4269,19 @@ img.alignright{
 	top: 0.5rem;
 	margin-right: .625rem;
 }
+.entry-content .checkmark-list__title p, .block-editor-block-list__layout .checkmark-list__title p {
+				font-size: inherit;
+				margin-bottom: inherit;
+			}
 /* .checkmark-list__title + .checkmark-list__title {
 		}
 		.& ~ .checkmark-list__title {
 		} */
 .entry-content .checkmark-list__grid, .block-editor-block-list__layout .checkmark-list__grid{
 	display: grid;
+}
+.entry-content .checkmark-list__grid a:hover, .block-editor-block-list__layout .checkmark-list__grid a:hover{
+	text-decoration-line: underline;
 }
 .entry-content .checkmark-list__grid--3col, .block-editor-block-list__layout .checkmark-list__grid--3col{
 	margin-left: auto;
@@ -5134,14 +5112,9 @@ img.alignright{
 	min-width: 150px;
 			white-space: wrap;
 }
-.entry-content .interest-rate-table__link > a, .block-editor-block-list__layout .interest-rate-table__link > a{
-	text-align: left;
-}
-@media (min-width: 940px){
-	.entry-content .interest-rate-table__link > a, .block-editor-block-list__layout .interest-rate-table__link > a{
-		float: right;
-	}
-}
+.entry-content .interest-rate-table__link > a, .block-editor-block-list__layout .interest-rate-table__link > a {
+				/* @apply text-left lg:float-right; */
+			}
 .entry-content .interest-rate-table__footnotes, .block-editor-block-list__layout .interest-rate-table__footnotes{
 	margin-top: 2.5rem;
 }
@@ -5252,7 +5225,7 @@ body.home .entry-content .featured-rates, body.home .block-editor-block-list__la
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
 	padding-left: .3125rem;
 	padding-right: .3125rem;
 	text-align: center;
@@ -5260,6 +5233,11 @@ body.home .entry-content .featured-rates, body.home .block-editor-block-list__la
 @media not all and (min-width: 768px){
 	.entry-content .featured-rates__col, .block-editor-block-list__layout .featured-rates__col{
 		width: 50%;
+	}
+}
+@media (min-width: 940px){
+	.entry-content .featured-rates__col, .block-editor-block-list__layout .featured-rates__col{
+		margin-top: 1.25rem;
 	}
 }
 @media (min-width: 768px) {
@@ -5336,7 +5314,119 @@ body.home .entry-content .featured-rates, body.home .block-editor-block-list__la
 		width: 200px;
 	}
 }
-.entry-content .featured-rates__p, .block-editor-block-list__layout .featured-rates__p{
+Laborum
+			ipsum
+			aliquip
+			ea
+			id
+			excepteur
+			laboris
+			Lorem
+			officia
+			ullamco
+			aliquip
+			magna
+			qui.
+			Duis
+			duis
+			cillum
+			excepteur
+			ipsum
+			incididunt
+			elit
+			laborum.
+			Nostrud
+			et
+			irure
+			proident
+			incididunt
+			cupidatat
+			fugiat
+			ipsum
+			pariatur
+			esse
+			cupidatat.
+			Veniam
+			quis
+			duis
+			in
+			pariatur
+			minim
+			cupidatat
+			aliquip
+			proident
+			labore
+			ad
+			incididunt
+			nostrud.
+			Aliquip
+			dolore
+			velit
+			nulla
+			ipsum
+			dolor
+			Lorem
+			pariatur
+			eiusmod
+			velit
+			exercitation.
+			.entry-content .featured-rates__p, Laborum
+			ipsum
+			aliquip
+			ea
+			id
+			excepteur
+			laboris
+			Lorem
+			officia
+			ullamco
+			aliquip
+			magna
+			qui.
+			Duis
+			duis
+			cillum
+			excepteur
+			ipsum
+			incididunt
+			elit
+			laborum.
+			Nostrud
+			et
+			irure
+			proident
+			incididunt
+			cupidatat
+			fugiat
+			ipsum
+			pariatur
+			esse
+			cupidatat.
+			Veniam
+			quis
+			duis
+			in
+			pariatur
+			minim
+			cupidatat
+			aliquip
+			proident
+			labore
+			ad
+			incididunt
+			nostrud.
+			Aliquip
+			dolore
+			velit
+			nulla
+			ipsum
+			dolor
+			Lorem
+			pariatur
+			eiusmod
+			velit
+			exercitation.
+			.block-editor-block-list__layout .featured-rates__p{
 	margin-bottom: 0;
 	margin-top: -10px;
 	font-size: 1rem;
@@ -5344,9 +5434,128 @@ body.home .entry-content .featured-rates, body.home .block-editor-block-list__la
 	color: rgb(72 80 80 / var(--tw-text-opacity));
 }
 @media (min-width: 768px){
-	.entry-content .featured-rates__p, .block-editor-block-list__layout .featured-rates__p{
+	Laborum
+			ipsum
+			aliquip
+			ea
+			id
+			excepteur
+			laboris
+			Lorem
+			officia
+			ullamco
+			aliquip
+			magna
+			qui.
+			Duis
+			duis
+			cillum
+			excepteur
+			ipsum
+			incididunt
+			elit
+			laborum.
+			Nostrud
+			et
+			irure
+			proident
+			incididunt
+			cupidatat
+			fugiat
+			ipsum
+			pariatur
+			esse
+			cupidatat.
+			Veniam
+			quis
+			duis
+			in
+			pariatur
+			minim
+			cupidatat
+			aliquip
+			proident
+			labore
+			ad
+			incididunt
+			nostrud.
+			Aliquip
+			dolore
+			velit
+			nulla
+			ipsum
+			dolor
+			Lorem
+			pariatur
+			eiusmod
+			velit
+			exercitation.
+			.entry-content .featured-rates__p, Laborum
+			ipsum
+			aliquip
+			ea
+			id
+			excepteur
+			laboris
+			Lorem
+			officia
+			ullamco
+			aliquip
+			magna
+			qui.
+			Duis
+			duis
+			cillum
+			excepteur
+			ipsum
+			incididunt
+			elit
+			laborum.
+			Nostrud
+			et
+			irure
+			proident
+			incididunt
+			cupidatat
+			fugiat
+			ipsum
+			pariatur
+			esse
+			cupidatat.
+			Veniam
+			quis
+			duis
+			in
+			pariatur
+			minim
+			cupidatat
+			aliquip
+			proident
+			labore
+			ad
+			incididunt
+			nostrud.
+			Aliquip
+			dolore
+			velit
+			nulla
+			ipsum
+			dolor
+			Lorem
+			pariatur
+			eiusmod
+			velit
+			exercitation.
+			.block-editor-block-list__layout .featured-rates__p{
 		font-size: 1.125rem;
 	}
+}
+.entry-content .featured-rates__btm-text, .block-editor-block-list__layout .featured-rates__btm-text{
+	position: relative;
+	top: -15px;
+	font-size: 10px;
+	--tw-text-opacity: 1;
+	color: rgb(21 99 110 / var(--tw-text-opacity));
 }
 .entry-content .featured-rates__number, .block-editor-block-list__layout .featured-rates__number {
 		}
@@ -6000,8 +6209,8 @@ body,
 	.xl\:max-h-\[1500px\]{
 		max-height: 1500px;
 	}
-	.xl\:max-h-\[348px\]{
-		max-height: 348px;
+	.xl\:max-h-\[400px\]{
+		max-height: 400px;
 	}
 	.xl\:w-\[20\%\]{
 		width: 20%;
